--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": "https://github.com/ajzeffer/paint-redirect-poc",
+  "author": "Adam Zeffer",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "perfume.js": "^2.1.2"
   }
 }
